[gd_scene load_steps=37 format=2]

[ext_resource path="res://JesusSaves/assets/fonts/font128.tres" type="DynamicFont" id=1]
[ext_resource path="res://JesusSaves/assets/fonts/bigfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://JesusSaves/assets/fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://JesusSaves/src/UserInterface/SplashScreen/SplashScreen.gd" type="Script" id=4]
[ext_resource path="res://JesusSaves/src/UserInterface/SplashScreen/FadeToBlack.gd" type="Script" id=5]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Hover2.tres" type="StyleBox" id=6]
[ext_resource path="res://JesusSaves/assets/art/background/cloud.png" type="Texture" id=7]
[ext_resource path="res://JesusSaves/assets/art/weapons/goldcross.png" type="Texture" id=8]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed2.tres" type="StyleBox" id=9]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal2.tres" type="StyleBox" id=10]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Hover_Red.tres" type="StyleBox" id=11]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed_Green.tres" type="StyleBox" id=12]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Hover_Green.tres" type="StyleBox" id=13]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal_Red.tres" type="StyleBox" id=14]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Pressed_Red.tres" type="StyleBox" id=15]
[ext_resource path="res://JesusSaves/assets/styles/ButtonStyle_Normal_Green.tres" type="StyleBox" id=16]
[ext_resource path="res://JesusSaves/assets/art/player/player.png" type="Texture" id=17]
[ext_resource path="res://JesusSaves/assets/fonts/night_train_315.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://JesusSaves/assets/art/background/bg_sky.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 17 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 17 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 17 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 17 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 17 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 18 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;
render_mode unshaded;

uniform bool Smooth = true;
uniform float width : hint_range(0.0, 16) = 1.0;
uniform vec4 outline_color : hint_color = vec4(0.0, 0.0, 0.0, 1.0);
uniform int pixel_size : hint_range(1, 10) = 4;
 
void fragment()
{
	vec2 unit = (1.0/float(pixel_size) ) / vec2(textureSize(TEXTURE, 0));
	vec4 pixel_color = texture(TEXTURE, UV);
	if (pixel_color.a == 0.0) {
		pixel_color = outline_color;
		pixel_color.a = 0.0;
		for (float x = -ceil(width); x <= ceil(width); x++) {
			for (float y = -ceil(width); y <= ceil(width); y++) {
				if (texture(TEXTURE, UV + vec2(x*unit.x, y*unit.y)).a == 0.0 || (x==0.0 && y==0.0)) {
					continue;
				}
				if (Smooth) {
					pixel_color.a += outline_color.a / (pow(x,2)+pow(y,2)) * (1.0-pow(2.0, -width));
					if (pixel_color.a > 1.0) {
						pixel_color.a = 1.0;
					}
				} else {
					pixel_color.a = outline_color.a;
					return
				}
			}
		}
	}
	COLOR = pixel_color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/Smooth = true
shader_param/width = 2.0
shader_param/outline_color = Color( 0, 0, 0, 1 )
shader_param/pixel_size = 2

[sub_resource type="Animation" id=11]
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Jesus:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JesusSaves:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 198, 41 ), Vector2( 198, 61 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("The:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 312, 247 ), Vector2( 312, 267 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("World:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2, 3.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 395, 184 ), Vector2( 395, 204 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("cloud:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("cloud2:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4, 2.2 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 30, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("cloud3:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6, 2.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("cloud4:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.8, 2.8 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("cloud5:offset")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1, 3.1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -30, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("The/goldcross:offset")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.4, 3.4 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.235294, 0.133333, 0.203922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.141176, 0.0627451, 0.168627, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[node name="SplashScreen" type="CanvasLayer"]
pause_mode = 2
layer = 2

[node name="Splash" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_sky" type="Sprite" parent="Splash"]
position = Vector2( 479, 312 )
texture = ExtResource( 19 )

[node name="cloud" type="Sprite" parent="Splash"]
position = Vector2( 808, 148 )
texture = ExtResource( 7 )
offset = Vector2( -0.495869, 0 )

[node name="cloud2" type="Sprite" parent="Splash"]
position = Vector2( 213, 385 )
texture = ExtResource( 7 )
offset = Vector2( 1.98347, 0 )

[node name="cloud3" type="Sprite" parent="Splash"]
position = Vector2( 182, 100 )
texture = ExtResource( 7 )
offset = Vector2( -4.89796, 0 )

[node name="cloud4" type="Sprite" parent="Splash"]
position = Vector2( 540, 252 )
texture = ExtResource( 7 )
offset = Vector2( -9.6, 0 )

[node name="cloud5" type="Sprite" parent="Splash"]
position = Vector2( 755, 481 )
texture = ExtResource( 7 )
offset = Vector2( -16.5374, 0 )

[node name="Jesus" type="AnimatedSprite" parent="Splash"]
position = Vector2( 472, 465 )
frames = SubResource( 7 )
frame = 1
playing = true

[node name="JesusSaves" type="Label" parent="Splash"]
margin_left = 198.0
margin_top = 43.5
margin_right = 765.0
margin_bottom = 203.5
custom_fonts/font = ExtResource( 1 )
text = "JESUS SAVES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="The" type="Label" parent="Splash"]
margin_left = 312.0
margin_top = 257.0
margin_right = 368.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 8 )
text = "he"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goldcross" type="Sprite" parent="Splash/The"]
material = SubResource( 10 )
position = Vector2( -15, 18.6 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
offset = Vector2( 0, -0.72 )

[node name="World" type="Label" parent="Splash"]
margin_left = 395.0
margin_top = 197.6
margin_right = 707.0
margin_bottom = 357.601
custom_fonts/font = ExtResource( 1 )
text = "WORLD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Splash"]
autoplay = "idle"
anims/idle = SubResource( 11 )

[node name="Start" type="Button" parent="Splash"]
margin_left = 701.0
margin_top = 334.0
margin_right = 789.0
margin_bottom = 366.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 3 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewSave" type="Button" parent="Splash"]
margin_left = 693.0
margin_top = 374.0
margin_right = 797.0
margin_bottom = 406.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 3 )
text = "Clear Save Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Splash"]
margin_left = 693.0
margin_top = 415.0
margin_right = 797.0
margin_bottom = 447.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Splash"]
margin_left = 712.0
margin_top = 456.0
margin_right = 784.0
margin_bottom = 488.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmClear" type="Panel" parent="Splash"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -88.0
margin_right = 148.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Splash/ConfirmClear"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 26.0
margin_right = 96.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
text = "Clear Save Data?"
align = 1

[node name="Yes" type="Button" parent="Splash/ConfirmClear"]
margin_left = 156.0
margin_top = 114.0
margin_right = 220.0
margin_bottom = 146.0
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = ExtResource( 14 )
custom_fonts/font = ExtResource( 3 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Splash/ConfirmClear"]
margin_left = 68.0
margin_top = 114.0
margin_right = 132.0
margin_bottom = 146.0
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = ExtResource( 3 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeToBlack" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="FadeToBlack"]
[connection signal="pressed" from="Splash/Start" to="Splash" method="_on_Start_pressed"]
[connection signal="pressed" from="Splash/NewSave" to="Splash" method="_on_NewSave_pressed"]
[connection signal="pressed" from="Splash/Options" to="Splash" method="_on_Options_pressed"]
[connection signal="pressed" from="Splash/Quit" to="Splash" method="_on_Quit_pressed"]
[connection signal="pressed" from="Splash/ConfirmClear/Yes" to="Splash" method="_on_Yes_pressed"]
[connection signal="pressed" from="Splash/ConfirmClear/No" to="Splash" method="_on_No_pressed"]
[connection signal="tween_all_completed" from="FadeToBlack/Tween" to="FadeToBlack" method="_on_Tween_tween_all_completed"]
